# FeedbackVertexSet-Experiments

./: LICENSE  README.md  approximation.csv  comparison.csv
src/: CMakeLists.txt  Main.cpp  OutputVerifier.cpp
src/lib/: CubicSolver.cpp  CubicSolver.h  Graph.cpp  Graph.h  HalfIntRelax.cpp  HalfIntRelax.h  Translator.cpp  Translator.h
src/scripts/: VerifyOuts.sh  collectAppx.sh  collectTestsTimes.sh  findTestsWithBoundedMaxRuntime.sh  getOpts.sh  runTest.sh  statsCollect.sh
src/solutions/: HalfIntBranching.cpp  HalfIntBranching.h  Solution.h  SolutionVariants.h
tests/pace-16open/: 001.stats  002.stats  003.opt  003.out  003.stats  004.stats  005.opt  005.out  006.opt  006.out  006.stats  007.opt  007.out  007.stats  009.opt  009.out  009.stats  010.stats  011.opt  011.stats  012.stats  013.stats  014.opt  014.stats  015.out  016.stats  017.out  017.stats  018.opt  018.stats  019.stats  020.opt  020.out  020.stats  021.stats  022.stats  023.stats  024.out  024.stats  025.stats  (+105 more)
tests/pace16-hidden/: 10.stats  100.stats  101.stats  102.stats  103.stats  104.stats  105.stats  106.stats  107.stats  108.stats  109.stats  110.stats  111.stats  112.stats  113.stats  114.stats  115.stats  116.stats  117.stats  118.stats  119.stats  12.stats  120.stats  121.stats  122.stats  123.stats  124.stats  125.stats  126.stats  127.stats  128.stats  129.stats  13.stats  130.stats  14.stats  15.stats  16.stats  17.stats  18.stats  19.stats  (+82 more)
tests/simple/: c4p1.graph  c5prism.graph  c5prism.opt  c5prism.out  c7.graph  c7.out  cube.graph  cube.opt  cube.out  cubicprism.graph  cubicprism.opt  cubicprism.out  doublep6.graph  doublep6.opt  doublep6.out  dynia.graph  dynia.opt  dynia.out  grid3x3.graph  grid3x3.opt  grid3x3.out  grid4x4.graph  grid4x4.opt  grid4x4.out  k4.graph  k4.opt  k4.out  k5.graph  k5.opt  k6.graph  k7.graph  k7.opt  oneDoublep6.graph  oneDoublep6.opt  oneVToAllDouble.graph  oneVToAllDouble.out  p6.graph  petersen.graph  petersen.opt  petersen.out  (+6 more)
